overflow fixed

--- a/src/components/home/section.home.module.css
+++ b/src/components/home/section.home.module.css
@@ -83,7 +83,7 @@
         font-size: 18px;
         width: 80%;
         min-width: 360px;
-        text-align: start;
+        text-align: center;
     }
 
     .imageContainer {
