--- a/src/components/home/sectionPortfolio.module.css
+++ b/src/components/home/sectionPortfolio.module.css
@@ -29,10 +29,9 @@
 
 .paragraph {
     width: 650px;
-    text-align: start;
+    text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 24px;
-    text-align: center;
 }
 
 .imageContainer {
@@ -76,7 +75,7 @@
     top: -1px;
     position: absolute;
     background:#ffffff;
-    bottom: 0px;
+    bottom: -1px;
     clip-path: polygon(0 0, 0% 100%, 100% 0);
 }
 
@@ -108,7 +107,7 @@
         font-size: 18px;
         width: 80%;
         min-width: 360px;
-        text-align: start;
+        text-align: center;
     }
 
     .imageContainer {
